更新footer下的备案号
之前是直接固定，现在可以在NexT主题配置里面进行修改，并且修改了大部分文章里面更多标签的位置

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - npm install hexo -g
 - npm install
 script:
+- echo "{\"access_key\": ${QN_AK},\"secret_key\": ${QN_SK}}"
 - hexo clean
 - git clone ${GH_REF} public
 - cd ./public
@@ -18,8 +19,6 @@ after_script:
 - git add --all .
 - git commit -m "updata website"
 - git push -u origin master
-after_success:
-- hexo deploy
 branches:
   only:
   - blog-source
